--- a/index.html
+++ b/index.html
@@ -26,16 +26,13 @@
 <!-- font-family: 'Crimson Text', serif; -->
 <!-- font-family: 'Poppins', sans-serif; -->
 <body>
-    <img src="./images/Cloudy.jpg" class="bg">
     <div class="headdesign">
-
+        <!-- <img src="./images/Cloudy.jpg" class="bg"> -->
         <div class="searchbar">
             <input class="searchbtn" type="search" name="search" id="city" placeholder=" Search your city">
 
-            <button class="btn" >Search</button>
+            <button class="btn" > <p class="btnname">Search</p></button>
         </div>
-            
-            
 
             <h1 class="state" >Kathmandu</h1>
             <p class="time"></p>
