--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
             <h1 class="state" >Kathmandu</h1>
-            <p class="time"></p>
+            <p class="time">12:45 pm</p>
 
             <div class="container1">
                 <img class="clouds" src="./images/clouds.png" alt="">
